--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vim/bundle/delmitmate"]
 	path = vim/bundle/delmitmate
-	url = git://github.com/Raimondi/delimitMate.git
+	url = https://github.com/Raimondi/delimitMate.git
 [submodule "vim/bundle/vim-colors-solarized"]
 	path = vim/bundle/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
@@ -12,7 +12,7 @@
 	url = https://github.com/Lokaltog/vim-easymotion.git
 [submodule "vim/bundle/closetag"]
 	path = vim/bundle/closetag
-	url = https://github.com/docunext/closetag.vim.git
+	url = https://github.com/vim-scripts/closetag.vim.git
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
