--- a/vim/.gitmodules
+++ b/vim/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "bundle/closetag"]
 	path = bundle/closetag
-	url = git://github.com/docunext/closetag.vim.git
+	url = https://github.com/vim-scripts/closetag.vim.git
 [submodule "bundle/delmitmate"]
 	path = bundle/delmitmate
-	url = git://github.com/Raimondi/delimitMate.git
+	url = https://github.com/Raimondi/delimitMate.git
 [submodule "bundle/pyflakes"]
 	path = bundle/pyflakes
-	url = git://github.com/kevinw/pyflakes-vim.git
+	url = https://github.com/kevinw/pyflakes-vim.git
 [submodule "vim-easymotion"]
 	path = vim-easymotion
 	url = https://github.com/Lokaltog/vim-easymotion.git
