--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/Lokaltog/vim-easymotion.git
 [submodule "vim/bundle/closetag"]
 	path = vim/bundle/closetag
-	url = https://github.com/vim-scripts/closetag.vim.git
+	url = https://github.com/docunext/closetag.vim.git
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
